RESOLVED FIXED106038
Crash in media/unsupported-rtsp.html.
https://bugs.webkit.org/show_bug.cgi?id=106038
Summary Crash in media/unsupported-rtsp.html.
Jer Noble
Reported 2013-01-03 14:04:42 PST
Crash in media/unsupported-rtsp.html.
Attachments
Patch (2.48 KB, patch)
2013-01-03 14:15 PST, Jer Noble
eric.carlson: review+
Jer Noble
Comment 1 2013-01-03 14:15:35 PST
Jer Noble
Comment 2 2013-01-04 11:19:32 PST
Note You need to log in before you can comment on or make changes to this bug.